# ProfessorPilot

./: .gitignore  LICENSE  README.md  commitVerify.txt  commitVerify_3.txt  courses.json  manage.py  package.json
.circleci/: config.yml
backend/: .flaskenv  app.py  appfactory.py  auth.py  exception_views.py  gunicorn.conf.py  requirements.txt  utils.py
backend/api/: __init__.py  config.py  utils.py
backend/api/courses/: courses_services.py  courses_views.py
backend/api/db/: course_reviews_services.py
backend/api/messages/: message.py  messages_service.py  messages_views.py  (+1 more)
backend/backend/: settings.py  urls.py
backend/reviews/: no_test_course_reviews_route.py  no_test_professor_reviews_route.py  service.py  test_course_reviews_route.py  test_course_reviews_service.py  test_professor_reviews_route.py  test_professor_reviews_service.py  views.py
backend/security/: auth0_service.py  guards.py
client/: CMakeLists.txt  main.cpp  main.qml  package-lock.json  package.json
client/Authentication/: CMakeLists.txt  CognitoLogin.qml  authentication.cpp  authentication.h  cognito.cpp  cognito.h
client/public/: index.html
client/src/: App.js  App.test.js  index.js
client/src/Components/: card.js
client/src/Pages/: home.js
client/src/components/layout/: Navbar.js
client/src/components/pages/: Courses.js  Discussions.js  Home.js  Professors.js
frontend/: babel.config.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: app.js  auth0-provider-with-navigate.js  index.js
professorpilot/: asgi.py  settings.py  urls.py  wsgi.py
(+111 files in other folders)
